# MB_vogue

./: .env.example  .gitignore  QA_TEST_CASES.txt  README.md  main.py  manage.py  pyproject.toml
.claude/: settings.local.json
MB_vogue/: asgi.py  settings.py  urls.py  wsgi.py
admin_panel/: forms.py  urls.py  views.py
core/: admin.py  cart_utils.py  context_processors.py  emails.py  forms.py  models.py  signals.py  urls.py  views.py
core/management/commands/: create_sample_data.py  set_prices_to_one_cedi.py
core/migrations/: 0001_initial.py  0002_wishlist_wishlistitem_wishlist_products_and_more.py
payments/: admin.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py
static/css/: admin-style.css  style.css
static/js/: main.js
templates/: base.html  footer.html  navbar.html
templates/admin_panel/: base.html  dashboard.html  login.html
templates/admin_panel/categories/: delete.html  form.html  list.html
templates/admin_panel/customers/: detail.html  list.html
templates/admin_panel/orders/: detail.html  list.html
templates/admin_panel/payments/: list.html
templates/core/: cart.html  checkout.html  home.html  order_detail.html  order_success.html  product_detail.html  product_list.html  wishlist.html
templates/emails/: order_confirmation.html  payment_confirmation.html
templates/registration/: password_reset_email.html
templates/users/: login.html  order_history.html  profile.html  profile_edit.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+7 files in other folders)
