[project]
name = "mb-vogue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.7",
    "django-widget-tweaks==1.5.0",
    "django-cors-headers>=4.0.0",
    "pillow==10.1.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "python-decouple>=3.8",
]
